# scrap_report

./: .gitignore  AGENTS.md  CONVERSA_MIGRACAO_STATUS.md  CREDENTIAL_POLICY.md  CROSS_PLATFORM_SMOKE.md  DEPENDENCY_LICENSE_REVIEW.md  EXECUTAR_SCRAP_WINDOWS.cmd  EXECUTAR_SCRAP_WINDOWS.ps1  HANDOFF.md  MIGRATION_HANDOFF.md  PRE_RELEASE_STATUS.md  README.md  RECOVERY_BACKLOG.md  RELEASE_SECURITY_CHECKLIST.md  REVIEW_THREAD_TRIAGE.md  ROUND_STATUS.md  SECURITY_MODEL.md  THREAT_MODEL.md  WINDOWS11_READINESS.md  WINDOWS_AGENT_INSTRUCTIONS.md  pyproject.toml
scripts/: main_windows.ps1  scrape_sam_windows.ps1  smoke_debian13.sh  smoke_windows11.ps1
src/scrap_report/: __init__.py  cli.py  config.py  contract.py  errors.py  file_ops.py  pipeline.py  redaction.py  reporting.py  sam_api.py  scraper.py  secret_provider.py  secret_scan.py  selector_engine.py  sensitive_patterns.py  sweep.py
src/scrap_report.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_config_secrets.py  test_contract.py  test_file_ops.py  test_pipeline_offline.py  test_redaction.py  test_reporting.py  test_sam_api.py  test_scraper_contract.py  test_secret_provider.py  test_secret_scan.py  test_selector_engine.py  test_sweep.py
