[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrap-report"
version = "0.1.0"
description = "Pipeline modular para scraping SAM e entrega de xlsx"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
