[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrap-report"
version = "0.1.17"
description = "Ferramentas para scraping SAM, manifests JSON e exportacao operacional"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
]

[project.scripts]
scrap-report = "scrap_report.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
